tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_monomorphization_tests_recursive_type_with_alias_errors/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Opt<()>` is recursive
  ┌─ src/main.nr:3:44
  │
3 │             let _tree: Opt<OptAlias<()>> = Opt::Some(OptAlias::None);
  │                                            --------- All types in Noir must have a known size at compile-time
  │

Aborting due to 1 previous error
